prevent form elements having z-index > site-header (#227)

--- a/client/app/styles/app.scss
+++ b/client/app/styles/app.scss
@@ -33,6 +33,9 @@
 }
 
 .form-section {
+  position: relative;
+  z-index: 1;
+
   & + & {
     border-top: $hr-border;
     margin-top: $global-margin*3;
